--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.363.0",
+    "mongoose": "^9.0.2",
     "next": "14.2.0",
     "next-intl": "^4.6.0",
     "react": "^18.3.0",
@@ -24,6 +27,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.12.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
