--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "trading-education-platform",
   "version": "1.0.0",
-  "description": "Trading Education & Demo Platform",
+  "description": "Trading Education & Demo Platform - Unified Next.js Application",
   "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "cd frontend && npm run dev",
-    "dev:backend": "cd backend && npm run dev",
+    "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
     "start": "cd frontend && npm start",
-    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
+    "lint": "cd frontend && npm run lint",
+    "install:all": "npm install && cd frontend && npm install"
   },
-  "keywords": ["trading", "demo", "education", "simulator"],
+  "keywords": ["trading", "demo", "education", "simulator", "nextjs"],
   "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  }
+  "license": "MIT"
 }
 
