--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
 # Dependencies
 node_modules/
-frontend/node_modules/
-backend/node_modules/
 
 # Build outputs
-frontend/.next/
-frontend/out/
-backend/dist/
+.next/
+out/
+dist/
 
 # Environment variables
 .env
 .env.local
 .env.production
-frontend/.env
-frontend/.env.local
-backend/.env
+.env*.local
 
 # Logs
 *.log
@@ -38,4 +34,7 @@ coverage/
 
 # Misc
 .cache/
+
+# Vercel
+.vercel
 
