--- a/package.json
+++ b/package.json
@@ -1,16 +1,47 @@
 {
   "name": "trading-education-platform",
   "version": "1.0.0",
+  "private": true,
   "description": "Trading Education & Demo Platform - Unified Next.js Application",
   "scripts": {
-    "dev": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build",
-    "start": "cd frontend && npm start",
-    "lint": "cd frontend && npm run lint",
-    "install:all": "npm install && cd frontend && npm install"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": ["trading", "demo", "education", "simulator", "nextjs"],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^3.0.3",
+    "chart.js": "^4.4.2",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.363.0",
+    "mongoose": "^9.0.2",
+    "next": "14.2.0",
+    "next-intl": "^4.6.0",
+    "react": "^18.3.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.0",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.2.2",
+    "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.12.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.0"
+  }
 }
 
